# Web-project

./: .env.example  .gitignore  HomePageStyle.css  README.md  conventions.md  index.html  navbar.css  package-lock.json  package.json  product.html
ProductExtractor/: .gitignore  README.md  browser.py  instructions.py  main.py  note.txt  offer.py  product.py  pyproject.toml  scraper.py  shared_types.py
ProductExtractor/database/: category_repository.py  product_repository.py  provider_repository.py
ProductExtractor/models/: builder.py  offer.py  product.py  provider.py
ProductExtractor/repository/: product_info_repository.py  product_offer_repository.py  product_repository.py  provider_repository.py  repository.py  utils.py
ProductExtractor/workflows/: mytek.py  spacenet.py
css/: myspace.css  navbar.css  style.css
database/: Repository.php  RepositoryInterface  bookmark.php  category.php  create.sql  database.php  databaseCreation.sql  product.php  productInfo.php  productOffer.php  provider.php  userClass.php
pages/: HomePage.html  catalog.html  home.html  myspace.html  navbar.html
public/: index.php
public/css/: bookmarks.css  cart.css  catalog.css  common.css  home.css  login.css  logout.css  myspace.css  signup.css
public/js/: bookmark_button.js  bookmarks_button.js  catalog.js
src/: Router.php  autoloader.php
src/Controllers/: BookmarkController.php  BookmarksController.php  CartController.php  CatalogController.php  HomeController.php  MySpaceController.php  NavbarController.php
src/Entities/: Bookmark.php  Cart.php  CartItem.php  Product.php  (+5 more)
(+81 files in other folders)
