[project]
name = "productextractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "mysql-connector-python>=9.6.0",
    "python-dotenv>=1.2.2",
    "selenium>=4.41.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
